fix: code overflow

--- a/docs/.vuepress/theme/styles/code-copy.styl
+++ b/docs/.vuepress/theme/styles/code-copy.styl
@@ -1,7 +1,7 @@
 .code-copy {
 	position: absolute;
 	right: 0;
-	font-family: $font-family-serif;
+	bottom: 0px;
 
 	svg {
 		height: 16px;
